crates/jsonschema-macros/tests/ui/attribute_not_key_value.stderr
error: expected identifier
 --> tests/ui/attribute_not_key_value.rs:1:25
  |
1 | #[jsonschema::validator(123)]
  |                         ^^^
